--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li>Docker</li>
         <li>Ansible</li>
         <li>Integração Contínua: Produtividade e Desenvolvimento de Software</li>
+		<li>Kubernetes</li>
     </ul>
 </body>
 </html>
