--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker</li>
+        <li>Docker: Criando containers de forma fácil</li>
         <li>Ansible</li>
         <li>Integração Contínua: Produtividade e Desenvolvimento de Software</li>
     </ul>
