--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker</li>
+        <li>Docker: Criando Containers</li>
         <li>Ansible</li>
         <li>Integração Contínua: Produtividade e Desenvolvimento de Software</li>
 		<li>Kubernetes</li>
