--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="#">
-    <title>Lista de Cursos Devops da Alura</title>
+    <title>Cursos Devops da Alura</title>
 </head>
 <body>
     <ul>
         <li>Vagrant</li>
         <li>Docker: Criando containers de forma fácil</li>
-        <li>Ansible</li>
+        <li>Ansible:Infraestrutura como código</li>
         <li>Integração Contínua: Produtividade e Desenvolvimento de Software</li>
     </ul>
 </body>
