--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li>Vagrant</li>
         <li>Docker: Criando containers de forma fácil</li>
-        <li>Ansible: Infraestrutura como código</li>
+        <li>Ansible</li>
         <li>Integração Contínua: Produtividade e Desenvolvimento de Software</li>
     </ul>
 </body>
