--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li>Docker: Criando containers de forma fácil</li>
         <li>Ansible</li>
         <li>Integração Contínua: Produtividade e Desenvolvimento de Software</li>
+        <li>Kubernetes: Introdução a orquestração de containers</li>
     </ul>
 </body>
 </html>
